Bug 513574 - Labplot freezes when cutting column with 100 000 rows. Memory issue.
Summary: Labplot freezes when cutting column with 100 000 rows. Memory issue.
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.12.0
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-19 10:41 UTC by marconeumaier@gmail.com
Modified: 2026-02-12 07:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0
Sentry Crash Report:


Attachments
Exammple file (1.78 MB, text/plain)
2025-12-19 10:41 UTC, marconeumaier@gmail.com
Details

Note You need to log in before you can comment on or make changes to this bug.
Description marconeumaier@gmail.com 2025-12-19 10:41:58 UTC
Created attachment 187790 [details]
Exammple file

Hi, 

I'm using Labplot (Entwicklerversion 2.12.0-88-g48a3ade8e) from the Snapstore on Ubuntu Noble. 
I can import a CSV data file with 2 columns (comma separated)  and 100 000 rows. When I try to cut a column the memory consumption is increasing strongly and Labplot freezes the whole PC at some point. 


Strangely I can copy / paste the data, but cutting or deleting the column with the delete key fails. I attached the file.
Comment 1 Alexander Semke 2026-02-12 00:26:41 UTC
Git commit 4472065134d8724ed992519d932eaea5b856d53c by Alexander Semke.
Committed on 11/02/2026 at 19:45.
Pushed by asemke into branch 'master'.

[spreadsheet] when clearing selected cells, avoid iterations over indeces
that were already cleared for fully selected columns directly. These unneeded
iterations are very costly, especially for bigger spreadsheets. Also, some other
minor performance improvements relevant for this workflow.
FIXED-IN: 3.0

M  +6    -18   src/backend/core/column/columncommands.cpp
M  +32   -10   src/frontend/spreadsheet/SpreadsheetView.cpp

https://invent.kde.org/education/labplot/-/commit/4472065134d8724ed992519d932eaea5b856d53c
Comment 2 Alexander Semke 2026-02-12 07:34:43 UTC
(In reply to marconeumaier@gmail.com from comment #0)
> Created attachment 187790 [details]
> Exammple file
> 
> Hi, 
> 
> I'm using Labplot (Entwicklerversion 2.12.0-88-g48a3ade8e) from the
> Snapstore on Ubuntu Noble. 
> I can import a CSV data file with 2 columns (comma separated)  and 100 000
> rows. When I try to cut a column the memory consumption is increasing
> strongly and Labplot freezes the whole PC at some point. 
> 
> 
> Strangely I can copy / paste the data, but cutting or deleting the column
> with the delete key fails. I attached the file.
Thank you for reporting this issue! We improved it and this step is taking now less than 1s now i7-14700 instead of 15s or so before this improvement. This fix will be part of the next major release 3.0 and will be also available soon in the next build for current development version (which is already close to 3.0 feature-wise).