[spreadsheet] when clearing selected cells, avoid iterations over indeces that were already cleared for fully selected columns directly. These unneeded iterations are very costly, especially for bigger spreadsheets. Also, some other minor performance improvements relevant for this workflow.

BUG: 513574
FIXED-IN: 3.0